--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -29,7 +29,8 @@ disabled = #707880
 width = 370px
 height = 24pt
 radius = 16
-offset-y = 10px 
+offset-x = 75px
+offset-y = 12px 
 
 ; dpi = 96
 
@@ -44,14 +45,14 @@ border-color = #00000000
 padding-left = 20px
 padding-right = 20px
 
-module-margin = 3px
+module-margin = 0px
 
 separator = 
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
 
-modules-left = xwindow
+modules-left = xwindow blank
 
 
 cursor-click = pointer
@@ -96,6 +97,33 @@ offset-x = 83%
 height = 24pt
 radius = 16
 
+[bar/menu]
+background = ${colors.background}
+foreground = ${colors.primary}
+modules-center =  menu
+height = 24pt
+radius = 16
+separator =
+offset-y = 16px 
+width = 50px
+offset-x = 20px 
+
+
+
+
+
+
+[module/menu]
+type = custom/text
+click-left = rofi -show drun
+
+content = ≡
+
+[module/blank]
+type = custom/text
+content = .
+content-foreground = ${color.background}
+
 
 
 [module/xworkspaces]
@@ -119,7 +147,7 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title%
 
 [module/filesystem]
 type = internal/fs
