--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,20 +1,36 @@
+#fading
 fading 				= true;
 fade-delta 			= 7.5;
-fade-in-step 		= 0.856;
-fade-out-step 		= 0.06;
-
-#Other
-vsync 				= false;
-dbe 				= true;
-backend 			= "glx";
+fade-in-step 		= 0.04;
+fade-out-step 		= 0.04;
 
 
-#opacity
+#Corner
+corner-radius = 30
+
+rounded-corners-exclude = [
+"window_type = 'dock'"
+];
+
+
+
+#Blur and opacity
+blur-method = "dual_kawase";
+blur-strength = 10;
+inactive-opacity = 0.95
+
+
 opacity-rule = [
-	"80:class_g		= 'URxvt'",
-
+	"70:class_g		= 'URxvt'",
+	"40:class_g		= 'polybar'",
 
 
 
 
 ];
+
+
+#Other
+vsync 				= false;
+dbe 				= true;
+backend 			= "glx";
