--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -6,7 +6,7 @@ fade-out-step 		= 0.04;
 
 
 #Corner
-corner-radius = 30
+corner-radius = 0
 
 rounded-corners-exclude = [
 "window_type = 'dock'"
@@ -15,14 +15,13 @@ rounded-corners-exclude = [
 
 
 #Blur and opacity
-blur-method = "dual_kawase";
-blur-strength = 10;
-inactive-opacity = 0.95
+#blur-method = "dual_kawase";
+#blur-strength = 10;
+#inactive-opacity = 0.95
 
 
 opacity-rule = [
 	"70:class_g		= 'URxvt'",
-	"40:class_g		= 'polybar'",
 
 
 
