--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -127,6 +127,7 @@ content-foreground = ${color.background}
 
 
 [module/xworkspaces]
+font-0 = Dejavu Serif:style=Book
 type = internal/xworkspaces
 
 label-active = ●
