--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,11 +16,15 @@
 ;
 ;==========================================================
 
+[fonts]
+font-0 = Noto Serif Tamil:style=Bold
+
+
 [colors]
 background = #282A2E
 background-alt = #373B41
 foreground = #C5C8C6
-primary = #F0C674
+primary = #b80be8
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
@@ -73,7 +77,7 @@ enable-ipc = true
 [bar/center]
 modules-center = xworkspaces
 background = ${colors.background}
-foreground = ${colors.foreground}
+foreground = ${colors.primary}
 height = 24pt
 radius = 16
 separator =
@@ -93,7 +97,7 @@ padding-right = 20px
 padding-left = 20px
 offset-y = 10px  
 width = 390px
-offset-x = 78%
+offset-x = 83.7%
 height = 24pt
 radius = 16
 
@@ -127,7 +131,7 @@ content-foreground = ${color.background}
 
 
 [module/xworkspaces]
-font-0 = Dejavu Serif:style=Book
+font-0 = DejaVu Serif:style=Book
 type = internal/xworkspaces
 
 label-active = ●
@@ -135,7 +139,7 @@ label-active = ●
 #label-active-underline= ${colors.primary}
 label-active-padding = 1
 
-label-occupied = ◉
+label-occupied =  ◉
 label-occupied-padding = 1
 
 label-urgent = %name%
