--- a/.confitg (Ultra-minimalist)/polybar/config.ini
+++ b/.confitg (Ultra-minimalist)/polybar/config.ini
@@ -30,11 +30,11 @@ alert = #A54242
 disabled = #707880
 
 [bar/left]
-width = 98%
+width = 45%
 height = 24pt
 radius = 5
-offset-x = 1%
-offset-y = 12px 
+offset-x = 54%
+offset-y = 7px 
 
 ; dpi = 96
 
@@ -72,15 +72,28 @@ enable-ipc = true
 ; override-redirect = true
 
 
-modules-left = xwindow blank
-modules-center = xworkspaces
-
 
 modules-right =  pulseaudio xkeyboard memory cpu date
+[bar/right]
+background = ${colors.background}
+foreground = ${colors.foreground}
+modules-left = xwindow
+width = 45%%
+height = 24pt
+radius = 5
+offset-x = 1%
+offset-y = 12px 
+padding-left = 20px
 
-
-
-
+[bar/center]
+background = ${colors.background}
+foreground = ${colors.foreground}
+modules-center = xworkspaces
+width = 7%
+height = 24pt
+radius = 5
+offset-x = 46.6%
+offset-y = 12px 
 
 
 
