--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,5 +1,5 @@
 #fading
-fading 				= true;
+fading 				= false;
 fade-delta 			= 7.5;
 fade-in-step 		= 0.04;
 fade-out-step 		= 0.04;
@@ -15,18 +15,29 @@ rounded-corners-exclude = [
 
 
 #Blur and opacity
-#blur-method = "dual_kawase";
-#blur-strength = 10;
-#inactive-opacity = 0.95
+blur-method = "dual_kawase";
+blur-strength = 5;
+inactive-opacity = 0.95
 
 
 opacity-rule = [
-	"90:class_g		= 'URxvt'",
+	"80:class_g		= 'URxvt'",
 
 
 
 
 ];
+
+
+#Animations
+transition-length = 300
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
+size-transition = true
+
+
 
 
 #Other
