--- a/.config (Royal_Theme)/picom.conf
+++ b/.config (Royal_Theme)/picom.conf
@@ -1,12 +1,12 @@
 #fading
-fading 				= true;
+fading 				= false;
 fade-delta 			= 7.5;
 fade-in-step 		= 0.04;
 fade-out-step 		= 0.04;
 
 
 #Corner
-corner-radius = 30
+corner-radius = 10
 
 rounded-corners-exclude = [
 "window_type = 'dock'"
@@ -16,15 +16,28 @@ rounded-corners-exclude = [
 
 #Blur and opacity
 blur-method = "dual_kawase";
-blur-strength = 10;
+blur-strength = 5;
 inactive-opacity = 0.95
 
 
 opacity-rule = [
-	"70:class_g		= 'URxvt'",
+	"80:class_g		= 'URxvt'",
+
+
 
 
 ];
+
+
+#Animations
+transition-length = 300
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
+size-transition = true
+
+
 
 
 #Other
