--- a/.config (even more minimalist theme)/picom.conf
+++ b/.config (even more minimalist theme)/picom.conf
@@ -1,8 +1,8 @@
 #fading
-fading 				= true;
-fade-delta 			= 7;
-fade-in-step 		= 0.04;
-fade-out-step 		= 0.02;
+#fading 				= true;
+#fade-delta 			= 7;
+#fade-in-step 		= 0.04;
+#fade-out-step 		= 0.02;
 
 
 #Corner
@@ -15,9 +15,9 @@ rounded-corners-exclude = [
 
 
 #Blur and opacity
-blur-method = "dual_kawase";
-blur-strength = 3;
-inactive-opacity = 0.95
+#blur-method = "dual_kawase";
+#blur-strength = 3;
+#inactive-opacity = 0.95
 
 
 opacity-rule = [
@@ -30,13 +30,16 @@ opacity-rule = [
 
 
 #Animations
-transition-length = 300
-transition-pow-x = 0.1
-transition-pow-y = 0.1
-transition-pow-w = 0.1
-transition-pow-h = 0.1
-size-transition = true
 
+animations = true;
+animation-stiffness = 1500;
+animation-dampening = 100;
+animation-speed = 200;
+animation-clamping = false;
+animation-mass = 1;
+animation-for-open-window = "zoom";
+animation-for-menu-window = "zoom";
+animation-for-transient-window = "zoom";
 
 
 
