--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,8 +1,8 @@
 #fading
-#fading 				= true;
-#fade-delta 			= 7;
-#fade-in-step 		= 0.04;
-#fade-out-step 		= 0.02;
+fading 				= true;
+fade-delta 			= 7;
+fade-in-step 		= 0.04;
+fade-out-step 		= 0.02;
 
 
 #Corner
@@ -34,10 +34,9 @@ opacity-rule = [
 animations = true;
 animation-stiffness = 1500;
 animation-dampening = 100;
-animation-speed = 200;
-animation-clamping = false;
+animation-clamping = true;
 animation-mass = 1;
-animation-for-open-window = "zoom";
+#animation-for-open-window = "zoom";
 animation-for-menu-window = "zoom";
 animation-for-transient-window = "zoom";
 
