--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -21,20 +21,20 @@ font-0 = Noto Serif Tamil:style=Bold
 
 
 [colors]
-background = #282A2E
+background = #060606
 background-alt = #373B41
 foreground = #C5C8C6
-primary = #b80be8
+primary = #c5c8c6
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 
 [bar/left]
-width = 370px
+width = 450px
 height = 24pt
 radius = 16
-offset-x = 75px
-offset-y = 12px 
+offset-x = 80%
+offset-y = 7px 
 
 ; dpi = 96
 
@@ -43,20 +43,19 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-size = 0pt
 border-color = #00000000
 
 padding-left = 20px
 padding-right = 20px
 
-module-margin = 0px
+module-margin = 15px
 
 separator = 
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
 
-modules-left = xwindow blank
 
 
 cursor-click = pointer
@@ -67,50 +66,24 @@ enable-ipc = true
 ; tray-position = right
 
 ; wm-restack = generic
-; wm-restack = bspwm
+wm-restack = bspwm
 ; wm-restack = i3
 
 ; override-redirect = true
 
 
 
-[bar/center]
-modules-center = xworkspaces
-background = ${colors.background}
-foreground = ${colors.primary}
-height = 24pt
-radius = 16
-separator =
-offset-y = 12px 
-width = 8%
-offset-x = 46%
-
-
-[bar/right]
 modules-right =  pulseaudio xkeyboard memory cpu date
+[bar/right]
+wm-restack = bspwm
 background = ${colors.background}
 foreground = ${colors.foreground}
-module-margin = 10px
-separator =
-separator-foreground = ${colors.disabled}
-padding-right = 20px
-padding-left = 20px
-offset-y = 10px  
-width = 390px
-offset-x = 83.7%
+modules-center = xworkspaces
+width = 200px
 height = 24pt
 radius = 16
-
-[bar/menu]
-background = ${colors.background}
-foreground = ${colors.primary}
-modules-center =  menu
-height = 24pt
-radius = 16
-separator =
-offset-y = 16px 
-width = 50px
-offset-x = 20px 
+offset-x = 2.5%
+offset-y = 12px 
 
 
 
@@ -139,14 +112,16 @@ label-active = ●
 #label-active-underline= ${colors.primary}
 label-active-padding = 1
 
-label-occupied =  ◉
+label-occupied =  ∙
 label-occupied-padding = 1
+label-occupied-margin-top= 100
 
-label-urgent = %name%
+
+label-urgent = ∙
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
-label-empty = ○
+label-empty = ∙
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
@@ -180,6 +155,7 @@ label-muted-foreground = ${colors.disabled}
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
+blacklist-1 = caps lock
 
 label-layout = %layout%
 label-layout-foreground = ${colors.primary}
