--- a/.config/cava/config
+++ b/.config/cava/config
@@ -29,11 +29,11 @@ bar_spacing = 1
 
 gradient = 1
 
-gradient_color_1 = '#151333'
+gradient_color_1 = '#0610a0'
 gradient_color_2 = '#6f6d93'
-gradient_color_3 = '#bab9ce'
-gradient_color_4 = '#ffffff'
-gradient_color_5 = '#ffffff'
-gradient_color_6 = '#ffffff'
-gradient_color_7 = '#ffffff'
-gradient_color_8 = '#ffffff'
+gradient_color_3 = '#b572a6'
+gradient_color_4 = '#fca40c'
+gradient_color_5 = '#fcb53a'
+#gradient_color_6 = '#ffffff'
+#gradient_color_7 = '#fca40c'
+#gradient_color_8 = '#fcb53a'
