--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,12 +1,12 @@
 #fading
 fading 				= true;
 fade-delta 			= 7;
-fade-in-step 		= 0.04;
-fade-out-step 		= 0.02;
+fade-in-step 		= 0.05;
+fade-out-step 		= 0.05;
 
 
 #Corner
-corner-radius = 10
+corner-radius = 20
 
 rounded-corners-exclude = [
 "window_type = 'dock'"
@@ -16,7 +16,7 @@ rounded-corners-exclude = [
 
 #Blur and opacity
 #blur-method = "dual_kawase";
-#blur-strength = 3;
+blur-strength = 6;
 #inactive-opacity = 0.95
 
 
