--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -30,13 +30,13 @@ alert = #A54242
 disabled = #707880
 
 [bar/left]
-width = 450px
-height = 24pt
+width = 60%
+height = 20pt
 radius = 16
-offset-x = 80%
-offset-y = 7px 
+offset-x = 20%
+offset-y = 15px 
 
-; dpi = 96
+dpi = 128
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -65,25 +65,15 @@ enable-ipc = true
 
 ; tray-position = right
 
-; wm-restack = generic
+
 wm-restack = bspwm
-; wm-restack = i3
 
 ; override-redirect = true
 
 
 
 modules-right =  pulseaudio xkeyboard memory cpu date
-[bar/right]
-wm-restack = bspwm
-background = ${colors.background}
-foreground = ${colors.foreground}
-modules-center = xworkspaces
-width = 200px
-height = 24pt
-radius = 16
-offset-x = 2.5%
-offset-y = 12px 
+modules-left = xworkspaces 
 
 
 
@@ -201,7 +191,7 @@ type = internal/date
 interval = 1
 
 date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date-alt = %d/%m/%Y %H:%M
 
 label = %date%
 label-foreground = ${colors.primary}
